stylesheets/application.css
/* Adapted from Basecamp stylesheet by Peter Theill, Commanigy - http://commanigy.com */

/* COLOR THEMES: */
/* green version: top_menu=6CA30A, header=9CC90E, tab_inactive=6CB30B, tab_hover=5CA306 */
/* red version: top_menu=3B4B56, header=9B0827, tab_inactive=750A15, tab_hover=620010 */

@import url(../../../stylesheets/application.css);

body, #wrapper { background-color:#e9e9e9; font-family:"Lucida Grande", verdana, arial, helvetica, sans-serif; }

a:hover { text-decoration:underline; }
a:hover, a:active { color:#2A5685; }

#header, #top-menu { margin:0; }
#header { background:/*#79B51C*/#9CC90E url(../images/logo.png) no-repeat 10px 50%; padding:8px 4px 0 108px; height:70px; }
#header h1 { margin:0; }	
#header #quick-search { margin:4px; }
#top-menu { background-color:#6CA30A; font-size:10px; position:relative; padding:0; height:21px }
#top-menu ul { padding:0 8px; }
#top-menu li, #top-menu #loggedas { color:#fff; line-height:21px; }
#top-menu li a { color:#fff; font-weight:normal; padding:2px 4px; margin:0; }
#top-menu li a:hover { color:#fff; text-decoration:underline; }
#main { background-color:#e9e9e9; margin:8px 8px 0px 8px; }
#content, #main.nosidebar #content {
  -moz-box-shadow:3px 3px 4px #bbb; -webkit-box-shadow:3px 3px 4px #bbb; box-shadow:3px 3px 4px #bbb;
  background:#fff; border-right:1px solid #bbb; border-bottom:1px solid #bbb; overflow:auto;
}
#footer { background-color:#e9e9e9; border:0px; clear:left; color:#666; font-size:9px; margin:4px 0 20px 20px; padding-bottom:15px; text-align:left; }
#footer a:hover { background:#666 none repeat scroll 0 0; color:#fff !important;}
#footer a:link, #footer a:visited { color:#666; }

div.flash { margin:6px 0 16px; }

/* Utilities */
.left { text-align:left; }

/* Boxes */
div.box ul { padding-left:2em; }

/* Headers */
h1, h2, h3, h4 { font-family:"Lucida Grande",arial,sans-serif; }
h1 { font-size:24px; font-weight:normal; margin:0pt 0pt 0pt 0.25em; padding:0pt 0pt 10px; text-align:left; }
h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 { border-bottom:0px;}

h2, .wiki h1 { background-color:#edf3fe; margin:-6px -10px 10px; padding:10px 15px; font-size:14px; color:#000; }
.wiki h1 { font-family:"Trebuchet MS",Verdana,sans-serif; font-weight:bold;}
.wiki h2 { background-color:#fff; }

h3, h4 { font-weight:normal; }

/* Sidebar */
#sidebar h3 { display: block; background-color: #edf3fe; border-bottom: 1px solid #ccc; color: #444;
              font-size: 13px; margin: 10px 0 5px -8px; padding:4px 8px; font-weight: bold; text-shadow:1px 1px 2px #fff; }
#sidebar > h3:first-child, #sidebar > div:first-child+h3 { margin-top:0; }
#sidebar h4 { margin:4px 0 2px 0; font-size:12px; font-weight:bold; color:#555; text-shadow:1px 1px 2px #fff; }
#sidebar p { margin:3px 2px; }
#sidebar .subsection { padding-left:10px; }
#admin-menu a.selected { background-color:#dddde3; background-position:8px center; display:block; padding:3px 30px 2px !important; margin-left:-8px; margin-right:20px; color:#2A5685; font-weight:bold; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; }

/* Modals */
div.modal { border:2px solid #9CC90E; padding:0; }
div.modal h3.title { background-color:#9CC90E; padding:4px 10px; border-top-left-radius:1px; border-top-right-radius:1px; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 0; -webkit-border-bottom-right-radius: 0; -khtml-border-bottom-right-radius: 0; border-bottom-right-radius: 0; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 0; -webkit-border-bottom-left-radius: 0; -khtml-border-bottom-left-radius: 0; border-bottom-left-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 0; -webkit-border-top-right-radius: 0; -khtml-border-top-right-radius: 0; border-top-right-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 0; -webkit-border-top-left-radius: 0; -khtml-border-top-left-radius: 0; border-top-left-radius: 0; }
.ui-widget-header { border: 1px solid #9CC90E; background: #9CC90E; color: white; }

/* Menu */
#main-menu { left:108px; padding:0; margin:0; }
#main-menu li a { color:#fff; background-color:#6CB30B; font-weight:normal; margin:0 1px; padding-bottom:8px; }
#main-menu li a:hover { color:#fff; background:#5CA306; text-decoration:none; }
#main-menu li a.selected, #main-menu li a.selected:hover {
  /* following lines taken from basecamphq directly. Thanks 37signals!! */
  background:#e9e9e9;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd', endColorstr='#e9e9e9'); /* IE */
  background:-webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#e9e9e9)); /* webkit */
  background:-moz-linear-gradient(top,  #fdfdfd,  #e9e9e9); /* firefox 3.6+ */
  color:#222222; font-weight:bold; margin:0 1px; padding-bottom:8px; text-decoration:none;
}

/* Quick-search box */
#quick-search { color:#9CC90E; }
#quick-search label { display:none; }
#quick-search input#q { border:1px solid #aaa; padding:3px 20px 3px 3px; border-radius:3px; box-sizing:border-box;
                        background:#fff url(../images/search.png) no-repeat right center; }

/* Tabs */
#content .tabs ul { border-bottom:2px solid #e9e9e9; }
#content .tabs ul li { margin-right:2px; }
#content .tabs ul li a { border:0; border-bottom:1px solid #e9e9e9; font-weight:normal; background-color:#f5f5f5; }
#content .tabs ul li a:hover { color:#222; background-color:#e9e9e9; }
#content .tabs ul li a.selected, #content .tabs ul li a.selected:hover { color:#222; border:0; background:#e9e9e9; font-weight:bold; }

/* Tables */
table.list { border:none; }
table.list td, table.list th { padding:6px 5px; }
table.list th { vertical-align:top; background-color:#f8f9fa; border-bottom:1px solid #ebebee; font-weight:normal; }
table.list tbody tr:hover { background-color:#edf3fe; }
.odd, .odd+.even-odd-linked { background-color:#fff; }
.even, .even+.even-odd-linked { background-color:#f8f9fa; }
table.list th .filter { margin:3px 0 2px; padding:1px 3px; width:100%; max-width:240px; box-sizing:border-box; border-radius:2px; border:1px solid #ccc; height:19px; color:#555; }
table.list th .filter:focus { outline:none; }

/* Forms */
.tabular label { line-height:2em; }

/* Issues */
div.issue div.subject h3 { color:#000; font-weight:bold; margin:4px 6px; }
div.issue p.author { font-style:italic; margin:3px 0 12px 4px; }
div.issue.details hr+div > .contextual { margin-top:0; }
div.journal div.wiki, div.issue div.wiki { color:#222; }
div.journal div.wiki { margin-left: 6px; }
div.journal { margin:5px 0 3px; padding:6px; }
div.journal.has-notes { background:#ffffdd; border:1px solid #d7d7d7; }
div.journal:not(.has-notes) + div.journal:not(.has-notes) { border-top:1px solid #e9e9e9; margin-top:0; padding-top:10px; }
div.journal h4 { color:#444; font-size:12px; margin-top:0; margin-left:6px; margin-bottom:8px; padding-right:3px; }
div.journal h4 .journal-link { color:#777; }
div.journal h4 div { font-style:normal; }
div.issue table.attributes>tbody>tr>th { min-width:100px; }
div.issue table.attributes>tbody>tr>td { min-width:200px; }
div.issue img.gravatar { padding:2px; width:36px; height:36px; margin-top:4px; }
h4 img.gravatar, div.issue table img.gravatar { padding:1px; }
div.issue table img.gravatar { margin-top:-1px; }
h4 img.gravatar { margin: 0px 4px 0 0; }
div.journal .details { margin:0 12px 10px; list-style-type:square; color:#777; }
div.journal .details strong { font-weight:normal; }
div.journal .details:hover { color:#222; }
div.journal p { margin:5px 0; }
div.journal div.contextual { margin-top:0; }
table.issues td.assigned_to { white-space:nowrap; }
table.issues td.checkbox input { margin: 4px 3px -2px 4px; }
table.issues tr > td { padding:3px 2px 1px; }
table.issues tr > td > table { margin-bottom:1px; }
tr.issue td.project { max-width:200px !important; white-space:normal; }
tr.issue td.subject { min-width:300px !important; }
#attachments_fields input.description { display:none; }

/* Wiki */
.jstElements { margin:0 0 2px -3px; }

/* Projects */
ul.projects div.description { color:#666; font-size:80%; font-style:italic; margin-left:18px; }

/* Disable subtasks */
/* (could be hidden with permissions, but not for admins) */
div#issue_tree, div#issue_tree + hr { display:none; }
p#parent_issue { display:none; }

/* context menu selection */
/*tr.context-menu-selection:hover > td, tr.context-menu-selection:hover td.todo, tr.context-menu-selection:hover a, tr.context-menu-selection:hover a:hover { background-color:#507aaa; color:#f8f8f8; }*/

/* priorities */
tr.priority-4, table.list tbody tr.priority-3:hover { color:#c00; }
tr.priority-4 a, tr.priority-3:hover a { color:#c00; }
tr.priority-4 { background:#ffe3e3; }
tr.priority-4:hover td, tr.priority-4:hover a, tr.priority-4:hover a:hover, tr.priority-4:hover span.status, tr.priority-4:hover p.extra-fields { color:#ffe3e3; background:#c00; }

tr.priority-3, table.list tbody tr.priority-3:hover { color:#b36d00; font-weight:normal; }
tr.priority-3 a, tr.priority-2:hover a { color:#b36d00; }
tr.priority-3 { background:#fadcb3; }
tr.priority-3:hover td, tr.priority-3:hover a, tr.priority-3:hover a:hover, tr.priority-3:hover span.status, tr.priority-3:hover p.extra-fields { color:#fadcb3; background:#b36d00; }

tr.priority-2, table.list tbody tr.priority-2:hover { color:#64992c; }
tr.priority-2 a, tr.priority-2:hover a { color:#64992c; }
tr.priority-2 { background:#f9ffef; }
tr.priority-2:hover td, tr.priority-2:hover a, tr.priority-2:hover a:hover, tr.priority-2:hover span.status, tr.priority-2:hover p.extra-fields { color:#f9ffef; background:#64992c; }

tr.priority-1, table.list tbody tr.priority-1:hover { color:#888; }
tr.priority-1 a, tr.priority-1:hover a { color:#888; }
tr.priority-1 { background:#eee; }
tr.priority-1:hover td, tr.priority-1:hover a, tr.priority-1:hover a:hover, tr.priority-1:hover span.status, tr.priority-1:hover p.extra-fields { color:#eee; background:#bbb; }

/* progress bars */
table.progress td { height:10px; }
table.progress td.closed { background-color:#9CC90E; }
tr.issue td.done_ratio { width:80px; }
tr.issue:hover table.progress td.closed { background-color:#9CC90E; } /* fix needed because of our additions */

/* reduce sidebar */
#sidebar, * html #sidebar { -moz-box-sizing:border-box; box-sizing:border-box; width:15%; padding-left:20px; }
#content, * html #content { -moz-box-sizing:border-box; box-sizing:border-box; width:85%; }

/* print styles */
@media print {
  #top-menu, #header, #main-menu, #sidebar, #footer, .contextual, .other-formats { display:none; }
  #content { width:98%; margin:0; padding:0; border:0; overflow:visible !important; }
  table td.checkbox { display:none; }
  table.issues thead tr th:first-child { display:none; }
  body, #wrapper, #wrapper2, #main, #content { background:none; background-color:none; }
  h2, p.pagination { display:none; }
  div.autoscroll { overflow:visible !important; }
  tr.group td:first-child span { display:none; }
}

